Add very basic hovering effects

--- a/src/components/scrubber.css
+++ b/src/components/scrubber.css
@@ -32,6 +32,10 @@
   width: 50%;
 }
 
+.mark:hover { 
+  background-color: lightgrey;
+}
+
 .playheadWrapper {
   z-index: 500; 
   position: absolute;
