--- a/src/components/Scrubber/Scrubber.css
+++ b/src/components/Scrubber/Scrubber.css
@@ -22,6 +22,7 @@
 .leftBox {
   min-height: 5px;
   min-width: 5px;
+  height: 1%;
   border-right: solid 1px black;
   width: 50%;
 }
@@ -29,6 +30,7 @@
 .rightBox {
   min-width: 5px;
   min-height: 5px;
+  height: 1%;
   width: 50%;
 }
 
@@ -46,11 +48,13 @@
 }
 
 .circle {
-  border-radius: 50%;
+  height: 1%;
+  width: 1%;
+  border-radius: 100%;
   background-color: black;
-  min-width: 5px;
-  min-height: 5px;
-  position: absolute;
+  position: relative;
+  left: 40%;
+  top: -50%;
 }
 
 
