--- a/src/components/Legend/style.css
+++ b/src/components/Legend/style.css
@@ -1,5 +1,6 @@
 .circle {
   width: 10px;
+  margin: 5px;
   height: 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -7,10 +8,9 @@
 }
 
 .legend-box {
+  min-width: 160px;
   line-height: 20px;
-  width: 250px;
   font-family: monospace;
-  padding: 1em;
 }
 
 .mark-key {
@@ -18,6 +18,7 @@
   float: left;
   font-weight: bold;
   font-size: 90%;
+  overflow-x: ellipse;
 }
 
 .mark-value {
@@ -28,4 +29,9 @@
   text-align: left;
   font-weight: bold;
   margin-bottom: 20px;
+}
+
+.mark-box {
+  padding-left: 0.5em;
+  padding-top: 0.5em;
 }
