Change waypoint navigation strategy

--- a/src/components/WaypointSelector/selector.css
+++ b/src/components/WaypointSelector/selector.css
@@ -1,4 +1,33 @@
-.scrollable {
-    max-height: 200px;
-    overflow-y: scroll;
+.arrow-right {
+  width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  border-left: 20px solid #000;
+  cursor: pointer;
+}
+
+.arrow-left {
+  width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent; 
+  border-right: 20px solid #000;
+  cursor: pointer;
+}
+
+.arrow-right:active {
+  width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent; 
+  border-left: 20px solid #984ea3;
+}
+
+.arrow-left:active {
+  width: 0; 
+  height: 0; 
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent; 
+  border-right: 20px solid #984ea3;
 }
