--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,40 @@ h1 {
   grid-template-areas: "storybox viewport"
 }
 
+.originbox {
+  background: rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  line-height: 22px;
+  border-radius: 10px;
+  width: 400px;
+  position: absolute;
+  z-index: 100;
+  bottom: 0;
+  margin: 5%;
+  right: 0;
+  font-family: monospace;
+}
+
+.originbox h1 {
+  white-space: pre;
+}
+
+.startBtn {
+  float: right;
+  font-size: 22px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 .storybox {
   grid-area: storybox;
   display: grid;
