--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@ h1 {
   width: 400px;
   position: absolute;
   z-index: 100;
-  bottom: 0;
+  top: 33%;
   margin: 5%;
   right: 0;
   font-family: monospace;
@@ -50,7 +50,9 @@ h1 {
 }
 
 .startBtn {
-  float: right;
+  margin-left: 10px;
+  margin-top: 20px;
+  float: left;
   font-size: 22px;
   padding: 10px;
   border: 2px solid black;
@@ -73,4 +75,18 @@ h1 {
                        "legend year-picker"
                        "filter-switch play-button"
 		       "waypoint-selector waypoint-selector";
+}
+
+
+.legend-floating {
+  position: absolute;
+  z-index: 100;
+  top: 0;
+  margin: 5%;
+  right: 5px;
+  font-family: monospace;
+}
+
+.hide {
+  display: none;
 }
